# MART

./: CMakeLists.txt  LICENSE  README.md
app/include/: config_loader.hpp  helper_functions.hpp  plot_results.py
app/include/config/: butterfly.config  detailed_power.config  dragonfly.config  hypercube.config  mapper.config  milp.config  ring.config  torus2d.config  torus3d.config  tree.config
app/input/: cg.256  cg.8  mapper.config  milp.config  topology.config
app/output/: log.txt  results.csv  routing_paths.txt
app/src/: Application.cpp
cmake/: FindCPLEX.cmake
docs/: application.md  imr.md  mapper.md  router.md  topology.md
examples/example1/: log.txt  result.csv  topology.config
examples/example2/: log.txt  result.csv  topology.config
examples/example3/: cg.64  log.txt  result.csv  topology.config
examples/example4/: cg.1  mapper.config  milp.config  topology.config
examples/example5/: log.txt  mapper.config  results.csv  topology.config
examples/example6/: log.txt  results.csv  topology.config
modules/IMR/include/: IMR.hpp
modules/IMR/src/: IMR.cpp
modules/Mapper/: Mapping.hpp
modules/Mapper/include/: ACO.hpp  BnB.hpp  GA.hpp  Greedy.hpp  KNN.hpp  PSO.hpp  QLearning.hpp  SA.hpp  TS.hpp
modules/Mapper/include/RAHTM/: IMR_mapping.h  LP_nodemappings.h  RAHTM.hpp  dragonflypartition.h  fattreepartition.h  flowset.h  graph.h  heurnodemappings.h  hilbert_c.h  hypercubepartition.h  map_graph.h  node_rahtm.h  nodemappings.h  point.h
modules/Mapper/src/: ACO.cpp  BnB.cpp  GA.cpp  Greedy.cpp  KNN.cpp  PSO.cpp  QLearning.cpp  SA.cpp  TS.cpp
modules/Router/: Router.hpp
modules/Router/include/: BSOR.hpp  DestinationTag.hpp  DimensionOrder.hpp  LoadBalancedOblivious.hpp  MinimalOblivious.hpp  SGR.hpp  TransCom.hpp  Valiant.hpp  XorTag.hpp
modules/Router/src/: DestinationTag.cpp  DimensionOrder.cpp  LoadBalancedOblivious.cpp  MinimalOblivious.cpp  Valiant.cpp  XorTag.cpp
modules/utils/links/: Link.hpp
modules/utils/milps/: CDG.hpp  CDGFlowParser.hpp  CommunicationGraph.hpp  MARTUtility.hpp  MILPSolver.hpp  TurnModel.hpp  multiSplitFlowParser.hpp  noSplitFlowParser.hpp  orUtils.hpp  topology_interface.hpp
modules/utils/networks/: Topology.hpp
modules/utils/networks/topologies/: Butterfly.hpp  Dragonfly.hpp  Hypercube.hpp  Mesh.hpp  Ring.hpp  Torus.hpp  Tree.hpp
modules/utils/networks/topologies/helper_function/: MeshHelper.cpp  MeshHelper.hpp  RingHelper.cpp  RingHelper.hpp  TorusHelper.cpp  TorusHelper.hpp
modules/utils/nodes/: Node.cpp  Node.hpp  Router_node.cpp  Router_node.hpp  map_nodes.hpp
modules/utils/power/: power_model.hpp
tests/IMR/: test_imr_fission_fusion.cpp  test_imr_fission_only.cpp
tests/mapper/: test.txt  test_aco.cpp  test_bnb.cpp  test_ga.cpp  test_greedy.cpp  test_knn.cpp  test_pso.cpp  test_qlearning.cpp  test_rahtm.cpp  test_sa.cpp  test_ts.cpp
tests/routers/: Makefile  config  config_dor  config_dtr  config_lbor  config_mor  config_vlt  config_xor  main.cpp  tempCodeRunnerFile.cpp  test_bsor.cpp  test_dor.cpp  test_dtr.cpp  test_lbor.cpp  test_mor.cpp  test_routes  test_sgr.cpp  test_txcomm_fission.cpp  test_txcomm_fusion.cpp  test_vlt.cpp  test_xor.cpp
tests/topologies/: Makefile  butterfly_test.cpp  dragonfly_test.cpp  hypercube_test.cpp  input.txt  mesh_test.cpp  ring_test.cpp  torus_test.cpp  tree_test.cpp
